# freq-sage

./: .env.template  .gitignore  Analysis.cs  CLI.cs  Cargo.toml  LICENSE  Program.cs  README.md  Utils.cs  diesel.toml  freq-sage.csproj  freq-sage.sln
migrations/2025-07-09-005730_create_frequencies/: down.sql  up.sql
migrations/2025-07-09-005823_create_sentence_rankings/: down.sql  up.sql
migrations/2025-09-17-184948_add_unique_constraint_sentence_rankings/: down.sql  up.sql
src/: analysis.rs  cli.rs  constants.rs  database.rs  main.rs  schema.rs  util.rs
