[package]
name = "freq-sage"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
clap = { version = "^4.5.28", features = ["derive"] }
once_cell = "1.21.3"
regex = "1.11.1"
redb = "3.0.2"
redb-derive = "0.1.0"
dotenvy = "0.15.7"
blake3 = "1.8.2"
